# automatic-parakeet

./: README.md  setup.cfg
src/example/: example.py
