[metadata]
name = example
version = attr: example.__version__
author = Abdullah Khan
author_email = abdullah@ajkhan.me
url = https://ajkhan.me
description = Example package description
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    simple-get = example.example:get_entrypoint

[options.extras_require]
dev = 
    black==22.1.0
    flake8==4.0.1

[options.package_data]
* = README.md